--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "standard": "^8.5.0",
     "vue": "^2.0.1",
-    "vue-dragula": "kristianmandrup/vue-dragula#dev"
+    "vue-dragula": "kristianmandrup/vue-dragula#dev",
+    "vue-router": "^2.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
