--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "standard": "^8.5.0",
     "vue": "^2.0.5",
     "vue-dragula": "kristianmandrup/vue2-dragula#master",
+    "vue-material": "^0.3.0",
     "vue-router": "^2.0.2",
     "vue2-dragula": "kristianmandrup/vue2-dragula#master"
   },
